--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "go-template",
+	"name": "go-template", // TODO: change this
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "golang",
 	"workspaceFolder": "/workspaces",
@@ -7,7 +7,8 @@
 	"extensions": [
 		"yzhang.markdown-all-in-one",
 		"wayou.vscode-todo-highlight",
-		"golang.go"
+		"golang.go",
+		"GitHub.copilot"
 	],
 	"postStartCommand": "go install"
 }
