use environment variables

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   golang:
-    container_name: go-template # TODO: change this
+    container_name: ${SERVICE_NAME}
     build:
       context: .
       dockerfile: Dockerfile
@@ -8,30 +8,32 @@ services:
     volumes:
       - ../:/workspaces
     environment:
-      PSQL_DBNAME: go-template # TODO: change this
+      PSQL_DBNAME: ${SERVICE_NAME}
       PSQL_HOST: postgresql
       PSQL_PORT: 5432
-      PSQL_USER: go-template # TODO: change this
+      PSQL_USER: ${SERVICE_NAME}
       PSQL_PASS: password
   postgresql:
+    env_file:
+      - .env
     image: postgres:15rc2-alpine
     restart: always
     environment:
-      POSTGRES_USER: go-template # TODO: change this
+      POSTGRES_USER: ${SERVICE_NAME}
       POSTGRES_PASSWORD: password
       PGPASSWORD: password123
-      POSTGRES_DB: go-template # TODO: change this
+      POSTGRES_DB: ${SERVICE_NAME}
     ports:
       - "5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - "go-template-volume:/var/lib/postgresql/data" # Update this to your project
   postgres-gui:
     image: sosedoff/pgweb
-    container_name: "go-template-pgweb" # TODO: change this
+    container_name: "${SERVICE_NAME}-pgweb"
     ports:
       - "8081:8081"
     depends_on:
       - postgresql
 
 volumes:
-  postgres-data:
+  go-template-volume: # Update this to your project
