--- a/db/makefile
+++ b/db/makefile
@@ -1,2 +1,5 @@
-migrate:
-	sql-migrate up
+migrate-postgres-dev:
+	sql-migrate up -env="postgres-dev" 
+
+migrate-mysql-dev:
+	sql-migrate up -env="mysql-dev"
