--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -32,6 +32,7 @@ RUN go install golang.org/x/tools/gopls@latest
 RUN go install github.com/rubenv/sql-migrate/...@latest
 RUN go install github.com/volatiletech/sqlboiler/v4@latest
 RUN go install github.com/volatiletech/sqlboiler/v4/drivers/sqlboiler-psql@latest
+RUN go install github.com/volatiletech/sqlboiler/v4/drivers/sqlboiler-mysql@latest
 RUN go install github.com/go-delve/delve/cmd/dlv@latest
 
 # 必要なNodeのパッケージの追加（vercel）
