--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -8,11 +8,13 @@ services:
     volumes:
       - ../:/workspaces
     environment:
-      PSQL_DBNAME: ${SERVICE_NAME}
+      DB_NAME: ${SERVICE_NAME}
       PSQL_HOST: postgresql
-      PSQL_PORT: 5432
-      PSQL_USER: ${SERVICE_NAME}
-      PSQL_PASS: password
+      MYSQL_HOST: mysql
+      DB_PORT: 5432
+      DB_USER: ${SERVICE_NAME}
+      DB_PASS: password
+      ENV: local
   postgresql:
     env_file:
       - .env
@@ -26,7 +28,7 @@ services:
     ports:
       - "5432"
     volumes:
-      - "go-template-volume:/var/lib/postgresql/data" # Update this to your project
+      - "go-template-postgres-volume:/var/lib/postgresql/data" # Update this to your project
   postgres-gui:
     image: sosedoff/pgweb
     container_name: "${SERVICE_NAME}-pgweb"
@@ -34,6 +36,25 @@ services:
       - "8081:8081"
     depends_on:
       - postgresql
+  mysql:
+    image: mysql:8.0.33
+    ports:
+      - 3306
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: ${SERVICE_NAME}
+      MYSQL_USER: ${SERVICE_NAME}
+      MYSQL_PASSWORD: password
+    volumes:
+      - "go-template-mysql-volume:/var/lib/mysql" # Update this to your project
+  mysql-gui:
+    image: phpmyadmin/phpmyadmin
+    ports:
+      - 8082:80
+    environment:
+      - PMA_ARBITRARY=1
+    
 
 volumes:
-  go-template-volume: # Update this to your project
+  go-template-postgres-volume: # Update this to your project
+  go-template-mysql-volume: # Update this to your project
