--- a/db/dbconfig.yml
+++ b/db/dbconfig.yml
@@ -5,5 +5,5 @@ postgres-dev:
 
 mysql-dev:
     dialect: mysql
-    datasource: ${DB_USER}:${DB_PASS}@tcp(${MYSQL_HOST}:3306)/${DB_NAME}?charset=utf8&parseTime=true
+    datasource: ${DSN}&charset=utf8&parseTime=true
     dir: migrations/my_sql
